# tx90_descartes

./: README.md  REDEME.md
spindle/: CMakeLists.txt  package.xml
spindle/launch/: display.launch  gazebo.launch
spindle/urdf/: spindle.urdf
staubli_tx90_support/config/: opw_parameters_tx_90.yaml
staubli_tx90_support/urdf/: tx90.yaml  tx90_macro.xacro  tx_90.urdf
tx90_moveit_config/: .setup_assistant  package.xml
tx90_moveit_config/config/: different_kinematics.yaml  fake_controllers.yaml  kinematics.yaml  staubli_tx90_gazebo.srdf
tx90_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  staubli_tx90_gazebo_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml
tx_90_ikfast_tx_90_plugin/: update_ikfast_plugin.sh
tx_90_ikfast_tx_90_plugin/src/: tx_90_tx_90_ikfast_solver.cpp
tx_90_moveit_client/: CMakeLists.txt  package.xml
tx_90_moveit_client/script/: client_tutorial.py
tx_90_moveit_client/src/: example1.cpp
tx_90_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
tx_90_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  ros_controllers.yaml  staubli_tx90.srdf
tx_90_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_planning_execution.launch  planning_context.launch  (+10 more)
